fix(style): add horizontal padding to prevent text cut offs

--- a/components/Text/style.module.scss
+++ b/components/Text/style.module.scss
@@ -39,6 +39,8 @@
   background-color: transparent;
   background-size: auto;
   background-origin: padding-box;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .hero-heading {
